--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,46 @@
 {% extends 'base.html' %}
 
-{% block content %}
-    {% for product in products[:20] %}
-        <h1>{{ product.name }}</h1>
-        <h3><em>{{ product.category }}</em></h3>
-        <img src="{{ product.link_photo }}">
-        <p>{{ product.description[:100] }}</p>
-        <p>{{ product.address }}</p>
-        <p><em>{{ product.price }} руб.</em></p>
-        <p>{{ product.published.strftime('%d.%m.%Y %H:%M') }}</p>
-        <hr>
-    {% endfor %}
-{% endblock content %}
+{% block page_content %}
+    <div class="row">
+        <div class='col-dm-4'>
+        {% for product in products %}
+            <h3><a href="">{{ product.name }}</a></h3>
+            <h5<em>Категория: {{ product.category }}</em></h5><br>
+            <img src="{{ product.link_photo }}" height="300" width="300">
+            <p>Описание: {{ product.description[:100] }}...</p>
+            <p>Адрес: {{ product.address }}</p>
+            <p><em>Цена: {{ product.price }} руб.</em></p>
+            <p>Опубликовано: {{ product.published.strftime('%d.%m.%Y %H:%M') }}</p>
+            <hr>
+        {% endfor %}
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="{% if pagination.has_prev %} {{ prev_url }} {% endif %}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    {% for p in range(1, pagination.pages + 1) %}
+                        <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                    {% endfor %}
+                    <li class="page-item">
+                        <a class="page-link" href=" {% if pagination.has_next %} {{ next_url }} {% endif %}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-dm-6">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
+            
+        </div>
+        <div class="col-md-3">
+        </div>
+    </div>
+{% endblock page_content %}
