--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,1 +1,10 @@
 {% extends 'base.html' %}
+
+{% block content %}
+<div class="container">
+    <div class="d-flex justify-content-center">
+        <h1>Произошла ошибка сервера!</h1>
+        <p>На сервере произошла непредвиденная ошибка, пожалуйста, подождите. Она скоро будет исправлена</p>
+    </div>
+</div>
+{% endblock content %}
