--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<div class="container">
+{% block page_content %}
     <div class="d-flex justify-content-center">
         <h1>Страница, которую вы ищете, не существует!</h1>
         <p>Наверное, вы ошиблись при наборе адреса или перешли по неверной ссылке.</p>
     </div>
-</div>
-{% endblock content %}
+{% endblock page_content %}
