--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<div class="container">
+{% block page_content %}
     <div class="d-flex justify-content-center">
         <h1>Произошла ошибка сервера!</h1>
         <p>На сервере произошла непредвиденная ошибка, пожалуйста, подождите. Она скоро будет исправлена</p>
     </div>
-</div>
-{% endblock content %}
+{% endblock page_content %}
