--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"> 
-                    <li><a href="{{ url_for('index') }}">Главная</a></li>
+                    <li><a href="{{ url_for('main.index') }}">Главная</a></li>
                 </ul> 
             </div>
         </div> 
