--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,45 +2,46 @@
 
 {% block page_content %}
     <div class="row">
-        <div class='col-dm-4'>
-        {% for product in products %}
-            <h3><a href="">{{ product.title }}</a></h3>
-            <h5<em>Категория: {{ product.category }}</em></h5><br>
-            <img src="{{ product.link_photo }}" height="300" width="300">
-            <p>Описание: {{ product.description[:100] }}...</p>
-            <p>Адрес: {{ product.address }}</p>
-            <p><em>Цена: {{ product.price }} руб.</em></p>
-            <p>Опубликовано: {{ product.published.strftime('%d.%m.%Y %H:%M') }}</p>
-            <hr>
-        {% endfor %}
+        <div class='col-3'>
+        </div>
+        <div class='col-6'>
+            {% for product in products %}
+                <div class="item_card">
+                    <h4><a href="product/{{ product.id }}">{{ product.title }}</a></h4>
+                    <img src="{{ product.link_photo }}" height="200" width="200">
+                    <p>Описание: {{ product.description[:100] }}...</p>
+                    <p>Адрес: {{ product.address }}</p>
+                    <p><em>Цена: {{ product.price }} руб.</em></p>
+                    <p>Опубликовано: {{ product.published.strftime('%d.%m.%Y %H:%M') }}</p>
+                </div>
+            {% endfor %}  
+        </div>
+        <div class="col-3">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+        </div>
+        <div class="col-6">
             <nav aria-label="Page navigation">
                 <ul class="pagination">
-                    <li class="page-item">
+                    <li class="page-item {% if not pagination.has_prev %} disabled {% endif %}"  >
                         <a class="page-link" href="{% if pagination.has_prev %} {{ prev_url }} {% endif %}" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                     {% for p in range(1, pagination.pages + 1) %}
-                        <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                        <li class="page-item {% if pagination.page == p %} active aria-current="page"{% endif %}"><a class="page-link" href="?page={{ p }}">{{ p }}</a>
                     {% endfor %}
-                    <li class="page-item">
-                        <a class="page-link" href=" {% if pagination.has_next %} {{ next_url }} {% endif %}" aria-label="Next">
+                    <li class="page-item {% if not pagination.has_next %} disabled {% endif %}">
+                        <a class="page-link" href="{% if pagination.has_next %} {{ next_url }} {% endif %}" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
                 </ul>
             </nav>
         </div>
-        <div class="col-dm-6">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-6">
-            
-        </div>
-        <div class="col-md-3">
+        <div class="col-3">
         </div>
     </div>
 {% endblock page_content %}
