--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,1 +1,36 @@
 {% extends 'base.html' %}
+
+{% block page_content %}
+    <h1>Авторизация</h1>
+    <div class="row">
+        <div class="col-4">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-warning" role="alert">
+                        {% for message in messages %}
+                            {{ message }}<br>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            {% endwith %}
+            <form action="{{ url_for('auth.login') }}" method="POST">
+                {{ form.hidden_tag() }}
+                <div class="mb-3">
+                    {{ form.email.label }}
+                    {{ form.email() }}
+                </div>
+                <div class="mb-3">
+                    {{ form.password.label}}
+                    {{ form.password() }}
+                </div>
+                <div class="mb-3">
+                    {{ form.remember_me() }}
+                    {{ form.remember_me.label }}
+                </div>
+                {{ form.submit() }}
+            </form>
+        </div>
+        <div class="col-8">
+            
+        </div>
+{% endblock page_content %}
