--- a/app/templates/auth/registration.html
+++ b/app/templates/auth/registration.html
@@ -1,1 +1,42 @@
 {% extends 'base.html' %}
+
+{% block page_content %}
+    <h1>Регистрация</h1>
+    <div class="row">
+        <div class="col-4">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-warning" role="alert">
+                        {% for message in messages %}
+                            {{ message }}<br>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            {% endwith %}
+            <form action="{{ url_for('auth.registration') }}" method="POST">
+                {{ form.hidden_tag() }}
+                <div class="mb-3">
+                    {{ form.email.label }}
+                    {{ form.email() }}
+                </div>
+                <div class="mb-3">
+                    {{ form.fname.label }}
+                    {{ form.fname() }}
+                </div>
+                <div class="mb-3">
+                    {{ form.lname.label }}
+                    {{ form.lname() }}
+                </div>
+                <div class="mb-3">
+                    {{ form.password.label }}
+                    {{ form.password() }}
+                </div>
+                <div class="mb-3">
+                    {{ form.pass_conf.label }}
+                    {{ form.pass_conf() }}
+                </div>
+                {{ form.submit() }}
+            </form>
+        </div>
+    </div>
+{% endblock page_content %}
