--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,29 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link type="image/png" sizes="32x32" rel="icon" href="/static/favicon.ico">
     <title>{{ title }}</title>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1" href="{{ url_for('main.index') }}">{{ title }}</a>
+            <a class="navbar-brand mb-0 h1" href="{{ url_for('main.index') }}">
+                <img src="/static/favicon.ico" alt="" width="30" height="28" class="d-inline-block align-text-top">
+                Авитоклон
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Главная</a>
+                    <a class="nav-link" aria-current="page" href="{{ url_for('main.index') }}">Главная</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Войти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Зарегистрироваться</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Разместить объявление</a>
+                {% if not current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.login') }}">Войти</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.registration') }}">Зарегистрироваться</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Ваши объявления</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Разместить объявление</a>
+                    </li>
+                {% endif %}
                 </ul>
             </div>
         </div>
