--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,13 @@
     <br>
     {% block content %}
     <div class='container'>
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+
         {% block page_content %}{% endblock page_content %}
     </div>
     {% endblock content %}
