--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,1 +1,17 @@
 {% extends 'base.html' %}
+
+{% block page_content %}
+<div class="row">
+    <div class="col-md-12">
+        <div class="error-template">
+            <h2>
+                Срок действия подтверждения истек.
+            </h2>
+            <div class="error-details">
+                <a href="{{ url_for('auth.resend_email_confirmation') }}" class="btn btn-link">Отправить подтверждение еще раз.</a>
+                
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock page_content %}
