--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,10 +49,19 @@
     <br>
     <br>
     <br>
+    
     {% block content %}
         <div class='container'>
-            {% block page_content %}
-            {% endblock page_content %}
+            {% with messages = get_flashed_messages(with_categories=True) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}" role="alert">
+                            {{ message }}<br>
+                    </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            {% block page_content %}{% endblock page_content %}
         </div>
     {% endblock content %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
