--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -1,1 +1,56 @@
 {% extends 'base.html' %}
+
+{% block page_content %}
+    <h1>Смена пароля</h1>
+    <div class="row">
+        <div class="col-4">
+            
+            <form action="{{ url_for('auth.change_password') }}" method="POST">
+                {{ form.hidden_tag() }}
+                <div class="mb-3">
+                    {{ form.password_old.label }}
+
+                    {% if form.password_old.errors %}
+                        {{ form.password_old(class='is-invalid form-control') }}
+                        <div class="invalid-feedback">
+                            {% for error in form.password_old.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        <div>
+                    {% else %}
+                        {{ form.password_old() }}
+                    {% endif %}
+                </div>
+                <div class="mb-3">
+                    {{ form.password_new.label }}
+
+                    {% if form.password_new.errors %}
+                        {{ form.password_new(class='is-invalid form-control') }}
+                        <div class="invalid-feedback">    
+                            {% for error in form.password_new.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password_new() }}
+                    {% endif %}
+                </div>
+                <div class="mb-3">
+                    {{ form.pass_conf.label }}
+
+                    {% if form.pass_conf.errors %}
+                        {{ form.pass_conf(class="is_invalid form-control") }}
+                        <div class="invalid-feedback">    
+                            {% for error in form.pass_conf.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.pass_conf() }}
+                    {% endif %}
+                </div>
+                {{ form.submit() }}
+            </form>
+        </div>
+    </div>
+{% endblock page_content %}
