--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -13,7 +13,7 @@
                 <br>
                 <a href="{{ url_for('auth.logout') }}">Выйти</a>
         </div>
-        <div class="col-9 shadow p-3 mb-5 bg-white rounded">
+        <div class="col-9">
         {% block user_content %}{% endblock user_content %}
         </div>
     </div>
