--- a/app/templates/profile/user_products.html
+++ b/app/templates/profile/user_products.html
@@ -1,16 +1,18 @@
 {% extends 'profile/user.html' %}
 
 {% block user_content %}
-    <h1>Мои объявления</h1>
-    {% if products %}
-        {% for product in products %}
-            <h4><a href="{{ url_for('product', product_id=product.id) }}"></a>{{ product.title }}</h4>
-            <img src="{{ product.link_photo }}" width="150" height="150">
-            <p>{{ product.published.strftime }}</p>
-            <hr>
-        {% endfor %}
-    {% else %}
-        <p>У вас нет ни одного объявления.</p>
-    {% endif %}
+    <div class="products shadow p-3 mb-5 bg-white rounded">
+        <h1>Мои объявления</h1>
+        {% if products %}
+            {% for product in products %}
+                <h4><a href="{{ url_for('product', product_id=product.id) }}"></a>{{ product.title }}</h4>
+                <img src="{{ product.link_photo }}" width="150" height="150">
+                <p>{{ product.published.strftime }}</p>
+                <hr>
+            {% endfor %}
+        {% else %}
+            <p>У вас нет ни одного объявления.</p>
+        {% endif %}
+    </div>
 {% endblock user_content %}  
 
