--- a/app/templates/profile/user_products.html
+++ b/app/templates/profile/user_products.html
@@ -5,9 +5,9 @@
         <h1>Мои объявления</h1>
         {% if products %}
             {% for product in products %}
-                <h4><a href="{{ url_for('product', product_id=product.id) }}"></a>{{ product.title }}</h4>
+                <h4><a href="{{ url_for('main.product_page', product_id=product.id) }}">{{ product.title }}</a></h4>
                 <img src="{{ product.link_photo }}" width="150" height="150">
-                <p>{{ product.published.strftime }}</p>
+                <p>{{ product.published }}</p>
                 <hr>
             {% endfor %}
         {% else %}
