--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -3,7 +3,8 @@
 {% block page_content %}
     <div class="row">
         <div class="col-3">
-                <img src="/static/profile_image/default-avatar.jpg" class="rounded" weight="100" height="100">
+                <img src=" {% if current_user.avatar_link %} {{ url_for('static', filename='profile_image/' + current_user.avatar_link) }}
+                            {% else %} {{ url_for('static', filename='profile_image/' + 'default-avatar.jpg') }} {% endif %}" class="rounded" weight="100" height="100">
                 <br>
                 <h4>{{ user.name }}</h4>
                 <p>{{ user.email }}</p>
