Add photo to new product

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-primary text-light" href="#" role="button" >Разместить объявление</a>
+                            <a class="nav-link btn btn-primary text-light" href="{{ url_for('profile.create_product') }}" role="button" >Разместить объявление</a>
                         </li>
                         {% endif %}
                     </ul>
