--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -3,8 +3,7 @@
 {% block page_content %}
     <div class="row">
         <div class="col-3">
-                <img src=" {% if current_user.avatar_link %} {{ url_for('static', filename='profile_image/' + current_user.avatar_link) }}
-                            {% else %} {{ url_for('static', filename='profile_image/' + 'default-avatar.jpg') }} {% endif %}" class="rounded" weight="100" height="100">
+                <img src="{{ user.get_avatar_link() }}" class="rounded" weight="100" height="100">
                 <br>
                 <h4>{{ user.name }}</h4>
                 <p>{{ user.email }}</p>
