--- a/app/templates/profile/user_products.html
+++ b/app/templates/profile/user_products.html
@@ -6,7 +6,7 @@
         {% if products %}
             {% for product in products %}
                 <h4><a href="{{ url_for('main.product_page', product_id=product.id) }}">{{ product.title }}</a></h4>
-                <img src="{{ product.link_photo }}" width="150" height="150">
+                <img src="{{ product.get_photo_link() }}" width="150" height="150">
                 <p>{{ product.published.strftime('%d.%m.%Y %H:%M') }}</p>
                 <hr>
             {% endfor %}
