--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -7,7 +7,7 @@
                 <br>
                 <h4>{{ user.name }}</h4>
                 <p>{{ user.email }}</p>
-                <a href="#" class="btn btn-light btn-sm" role="button">Редактировать профиль</a>
+                <a href="{{ url_for('profile.edit_profile', user_id=user.id) }}" class="btn btn-light btn-sm" role="button">Редактировать профиль</a>
                 <hr>
                 <a href="{{ url_for('profile.user_products', user_id=user.id) }}">Мои объявления</a>
                 <br>
