--- a/app/templates/profile/user_products.html
+++ b/app/templates/profile/user_products.html
@@ -8,6 +8,9 @@
                 <h4><a href="{{ url_for('main.product_page', product_id=product.id) }}">{{ product.title }}</a></h4>
                 <img src="{{ product.get_photo_link() }}" width="150" height="150">
                 <p>{{ product.published.strftime('%d.%m.%Y %H:%M') }}</p>
+                <div style="overflow:auto">
+                    <a href="#" class="btn btn-primary float-end" id="button"  name="button" type="button">Редактировать</a>
+                </div>
                 <hr>
             {% endfor %}
         {% else %}
