--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -7,11 +7,16 @@
                 <br>
                 <h4>{{ user.name }}</h4>
                 <p>{{ user.email }}</p>
-                <a href="{{ url_for('profile.edit_profile', user_id=user.id) }}" class="btn btn-light btn-sm" role="button">Редактировать профиль</a>
-                <hr>
-                <a href="{{ url_for('post.user_products', user_id=user.id) }}">Мои объявления</a>
-                <br>
-                <a href="{{ url_for('auth.logout') }}">Выйти</a>
+                {% if user == current_user %}
+                    <a href="{{ url_for('profile.edit_profile', user_id=user.id) }}" class="btn btn-light btn-sm" role="button">Редактировать профиль</a>
+                    <hr>
+                    <a href="{{ url_for('post.user_products', user_id=user.id) }}">Мои объявления</a>
+                    <br>
+                    <a href="{{ url_for('auth.logout') }}">Выйти</a>
+                {% else %}
+                    <hr>
+                    <a href="{{ url_for('post.user_products', user_id=user.id) }}">Объявления {{ user.name }}</a>
+                {% endif %}
         </div>
         <div class="col-9">
         {% block user_content %}{% endblock user_content %}
