Added template and view for change user proho

--- a/app/templates/profile/edit_profile.html
+++ b/app/templates/profile/edit_profile.html
@@ -3,13 +3,15 @@
 {% block user_content %}
     <h1>Настройки</h1>
     <div class="changes shadow p-3 mb-5 bg-white rounded">
-        <div class="d-grid gap-3">
-            <a class="btn btn-outline-primary" href="{{ url_for('profile.change_name', user_id=user.id) }}" role="button">Изменить имя</a>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-dark">Изображение <a href="{{ url_for('profile.change_photo', user_id=user.id) }}">Изменить</a></li>
+            {% block change_photo %}{% endblock change_photo %}
+            <li class="list-group-item list-group-item-dark">Имя <a href="{{ url_for('profile.change_name', user_id=user.id) }}">Изменить</a></li>
             {% block change_username %}{% endblock change_username %}
-            <a class="btn btn-outline-primary" href="{{ url_for('profile.change_email', user_id=user.id) }}" role="button">Изменить email</a>
+            <li class="list-group-item list-group-item-dark">Email <a href="{{ url_for('profile.change_email', user_id=user.id) }}">Изменить</a></li>
             {% block change_email %}{% endblock change_email %}
-            <a class="btn btn-outline-primary" href="{{ url_for('profile.change_password', user_id=user.id) }}" role="button">Изменить пароль</a>
+            <li class="list-group-item list-group-item-dark">Пароль <a href="{{ url_for('profile.change_password', user_id=user.id) }}">Изменить</a></li>
             {% block change_password %}{% endblock change_password %}
-        </div>
+        </ul>
     </div>
 {% endblock user_content %}
