--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link type="image/png" sizes="32x32" rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>{{ title }}</title>
+    <title>Авитоклон</title>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
@@ -31,7 +31,7 @@
                     {% else %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="{{ url_for('profile.user_profile', user_id=current_user.id) }}" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-                            <img src="{{ current_user.get_avatar_link() }}" alt="" width="30" height="30" class="d-inline-block align-text-top">
+                            <img src="{{ current_user.get_avatar_link() }}" alt="" width="25" height="25" class="d-inline-block align-text-top rounded-circle">
                             {{ current_user.name }}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
