--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -10,6 +10,10 @@
                 {% if user == current_user %}
                     <a href="{{ url_for('profile.edit_profile', user_id=user.id) }}" class="btn btn-light btn-sm" role="button">Редактировать профиль</a>
                     <hr>
+                    {% if not user.confirmed %}
+                        <a href="{{ url_for('auth.resend_email_confirmation') }}">Подтвердить email</a>
+                        <br>
+                    {% endif %}
                     <a href="{{ url_for('post.user_products', user_id=user.id) }}">Мои объявления</a>
                     <br>
                     <a href="{{ url_for('auth.logout') }}">Выйти</a>
