--- a/app/templates/main/product.html
+++ b/app/templates/main/product.html
@@ -19,6 +19,12 @@
                 <p>{{ user.email }}</p>
                 <hr>
                 <p>Объявление: №{{ product.id }}</p>
+                {% if user == current_user %}
+                    <div style="overflow:auto">        
+                        <a style="margin: 0 1px" href="{{ url_for('post.edit_product', user_id=user.id, product_id=product.id) }}" class="btn btn-primary float-end" id="button"  
+                        name="button" type="button">Редактировать</a> 
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
